@@ -1,5 +1,9 @@
 -
 
+    Bug fixed: Emails with tabs in header values were before
+    incorrectly stripped of this whitespace causing the set of headers
+    to be shortened. Thanks Jesse Perry
+
     Bug fixed: getIssueObjects() would break with KeyError if a
     reference to a join-in issuetracker (see bottom of Advanced 
     properties) is broken.
